Closed Bug 735481 Opened 12 years ago Closed 12 years ago

CSS class selector became case sensitive

Categories

(Core :: CSS Parsing and Computation, defect, P1)

13 Branch
x86
Windows 7
defect

Tracking

()

VERIFIED FIXED
mozilla14
Tracking Status
firefox13 - verified

People

(Reporter: jack, Assigned: bzbarsky)

References

Details

(Keywords: regression, Whiteboard: [qa!])

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:13.0) Gecko/20120313 Firefox/13.0a1
Build ID: 20120313090404

Steps to reproduce:

I am up-to-date with the latest windows 64 bit nightly, and noticed some CSS styles stopped working.  I have a mixed case class name, which works for one element but doesn't work in a second more complicated selector where a style needs to be applied to a child element of the one with the class. I'm attaching an example.


Actual results:

The style was applied if case matches perfectly.


Expected results:

The style is supposed to be applied.
Attachment #605561 - Attachment mime type: text/plain → text/html
Component: Untriaged → Style System (CSS)
Product: Firefox → Core
QA Contact: untriaged → style-system
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Works:
http://hg.mozilla.org/integration/mozilla-inbound/rev/6799a5e6912f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0) Gecko/20120312 Firefox/13.0a1 ID:20120312224507
Fails:
http://hg.mozilla.org/integration/mozilla-inbound/rev/4bd80687cb32
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:13.0) Gecko/20120312 Firefox/13.0a1 ID:20120312225607
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6799a5e6912f&tochange=4bd80687cb32
Gah.  How could we not have a testcase for this?

This is definitely a regression from bug 705877.
Assignee: nobody → bzbarsky
Blocks: 705877
Priority: -- → P1
Comment on attachment 605656 [details] [diff] [review]
Skip ancestor filtering on IDs and classes in quirks mode, because that matching needs to be case-insensitive.

r=dbaron
Attachment #605656 - Flags: review?(dbaron) → review+
http://hg.mozilla.org/integration/mozilla-inbound/rev/c1c473ede628

Jack, thank you for finding this and reporting it!
Comment on attachment 605656 [details] [diff] [review]
Skip ancestor filtering on IDs and classes in quirks mode, because that matching needs to be case-insensitive.

[Approval Request Comment]
Regression caused by (bug #): bug 705877
User impact if declined: Incorrect CSS selector matching on some quirks-mode
                         pages.
Testing completed (on m-c, etc.): Passes attached testcase and new regression
                                  test.
Risk to taking this patch (and alternatives if risky): Risk is very low.  This
   simply disables, in quirks mode, part of the optimization added in bug
   705877 that happens to not be valid in quirk mode as things stand.  If we
   don't approve this patch, we should back out bug 705877 from aurora, but
   that will bring back the performance issues on a number of sites that the
   patch in that bug fixed.
String changes made by this patch: None.
Attachment #605656 - Flags: approval-mozilla-aurora?
Target Milestone: --- → mozilla14
My pleasure! Thanks for all the work you all do :)
https://hg.mozilla.org/mozilla-central/rev/c1c473ede628
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment on attachment 605656 [details] [diff] [review]
Skip ancestor filtering on IDs and classes in quirks mode, because that matching needs to be case-insensitive.

[Triage Comment]
Approved for Aurora 13 - we think there's enough time left in the release cycle to shake out any regressions.
Attachment #605656 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: in-testsuite+
Whiteboard: [qa+]
Verified the issue as fixed on Firefox 13.0 beta 3 (BuildID: 20120509070325) using the test case attached by the reporter.
Status: RESOLVED → VERIFIED
Whiteboard: [qa+] → [qa!]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: