Bug 735481.  Skip ancestor filtering on IDs and classes in quirks mode, because that matching needs to be case-insensitive.  r=dbaron